# pricelint

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dependencies.txt  dfx.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.dfx/ic/canisters/backend/: backend.did  backend.did.d.ts  backend.did.js  backend.wasm  service.did.d.ts  service.did.js
.dfx/local/canisters/backend/: backend.did  backend.did.d.ts  backend.did.js  service.did  service.did.d.ts  service.did.js
ai_modules/: version.json
assets/: icp_history_price_2024.json
backend/: Cargo.toml  backend.did  icrc1_canister_ledger.did
backend/src/: lib.rs
backend/src/common/: macro_rules.rs  mod.rs  utils.rs
backend/src/common/macro_rules/: common_macros.rs
backend/src/common/proc_macro/src/: lib.rs
backend/src/common/utils/: hash.rs  time.rs  url.rs  xrc.rs
backend/src/ml/: api.rs
backend/src/ml/api/: default_api.rs
backend/src/ml/model/: default_model.rs  record.rs
backend/src/web/: api.rs  common.rs  models.rs  services.rs
backend/src/web/api/: canister_api.rs  monitor_api.rs  prediction_api.rs  predictor_api.rs  record.rs  stake_api.rs  test_api.rs  user_api.rs  user_canister_api.rs  wallet_api.rs
backend/src/web/common/: constants.rs  errors.rs  guard.rs  lifecycle.rs
backend/src/web/models/: biance_model.rs  canister_model.rs  context.rs  exchange_rate.rs  monitor.rs  prediction_model.rs  predictor_model.rs  record.rs  stake_model.rs  temp_stable.rs  user_model.rs  wallet_model.rs  wasm_file.rs
backend/src/web/services/: auth_service.rs  canister_service.rs  prediction_service.rs  predictor_service.rs  user_service.rs  wallet_service.rs
frontend/: App.vue  main.ts
frontend/api/: auth.ts  canister_pool.ts  canisters.ts  icp.ts  token.ts  user.ts
frontend/api/constants/: docs.ts  ic.ts  markets.ts  tokens.ts
frontend/assets/: icp_history_price_2024.json
frontend/assets/css/: main.scss
frontend/components/: ArrowIcon.vue  TopUpCycles.vue
frontend/components/home/: Footer.vue
frontend/components/navigator/: Navigator.vue
frontend/components/sidebar/: Sidebar.vue
frontend/env/: .env
frontend/public/: .ic-assets.json5
frontend/router/: index.ts
frontend/src/: App.vue  main.js
frontend/stores/: user.ts
frontend/types/: model.d.ts  predict.ts  types.ts  user.ts
frontend/utils/: cache.ts  common.ts  message.ts  storage.ts
frontend/views/app/: AppHome.vue
frontend/views/app/modules/: CanisterDetail.vue  Canisters.vue  Dashboard.vue
frontend/views/app/modules/canister/: CanisterDetail.vue  CanisterEdit.vue  CanisterImport.vue  CanisterInsights.vue  Canisters.vue
frontend/views/app/modules/canister/insights/: CanisterInsights.vue  Table.vue
frontend/views/home/: Home.vue
frontend/views/home/modules/: Comment.vue  Feature.vue  Features.vue  Login.vue  PredictTable.vue  Welcome.vue
pred/: Cargo.toml  pred.did
pred/src/: lib.rs
pred/src/api/: config.rs  mod.rs  monitor.rs  predict.rs  predict_api.rs  train.rs  train_api.rs
pred/src/common/: constants.rs  errors.rs  guard.rs  lifecycle.rs  macros.rs  mod.rs
pred/src/learning/: mod.rs
pred/src/models/: lstm_v1.rs  mod.rs
pred/src/models/interface/: common.rs  mod.rs  predict.rs  train.rs  validate.rs
pred/src/models/linear/: v1.rs
pred/src/models/linear/v1/: domain.rs  implement.rs  inner_api.rs  linear_domain.rs  linear_implement.rs  linear_inner_api.rs
pred/src/models/lstm/: v1.rs
pred/src/models/lstm/v1/: lstm.rs  lstm_domain.rs  lstm_implement.rs  lstm_innner_api.rs
pred/src/services/: mod.rs  pred_service.rs  user_predict_service.rs  wasm_service.rs
scripts/: generate_did.sh  rename_did.sh
src/backend/src/common/macro_rules/: macros.rs
src/backend/src/common/proc_macro/: Cargo.toml
src/backend/src/common/proc_macro/src/: lib.rs
src/backend/src/web/: common.rs  models.rs
src/backend/src/web/common/: errors.rs  guard.rs
src/backend/src/web/models/: context.rs  predictor_model.rs  user_model.rs
src/backend/src/web/services/: predictor_service.rs  user_service.rs
src/burn_price_backend/: Cargo.toml  burn_price_backend.did
src/burn_price_backend/src/: lib.rs  model.rs
src/burn_price_backend/src/web/: mod.rs
src/burn_price_backend/src/web/common/: errors.rs
src/burn_price_backend/src/web/models/: auth.rs
src/burn_price_backend/src/web/services/: auth_service.rs
src/burn_price_frontend/: package.json
src/burn_price_frontend/src/: App.vue
src/frontend/: package.json
src/ic_burn_backend/: Cargo.toml  ic_burn_backend.did
src/ic_burn_backend/src/: lib.rs  model.rs
src/ic_burn_backend/src/common/: macro_rules.rs  mod.rs  proc_macro.rs
src/ic_burn_backend/src/common/macro_rules/: macros.rs
src/ic_burn_backend/src/ml/: model.rs
src/ic_burn_backend/src/ml/model/: common.rs  mod.rs  record.rs  save_and_load.rs
src/ic_burn_backend/src/web/: mod.rs  models.rs  services.rs
src/ic_burn_backend/src/web/handlers/: user_handler.rs
src/ic_burn_backend/src/web/models/: auth.rs  context.rs  mod.rs  user_model.rs
src/ic_burn_frontend/src/: App.vue
ssl/: localhost.crt  localhost.key
