[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.13" 
bincode = "1.3.3"
burn = { git = "https://github.com/burn-rs/burn", default-features = false, features = ["std", "ndarray", "autodiff"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.3.2", default-features = false }
ic-stable-structures = { version="0.6.8"}
ic0 = {version = "0.23.0"}
lazy_static = "1.5.0"
proc_macro={path = "src/common/proc_macro/"}
