[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.13" 
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = { version="0.6.8"}
ic0 = {version = "0.23.0"}
lazy_static = "1.5.0"
proc_macro={path = "src/common/proc_macro/"}
ic-cdk-timers={version = "0.1.0" }
datetimeutils={version = "0.1.3"}
tokio = { version = "1", features = ["rt", "time"] }
urlencoding = "2.1"

[dev-dependencies]
pocket-ic = "9.0.2"
