[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.13" 
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = { version="0.6.8"}
lazy_static = "1.5.0"
proc_macro={path = "src/common/proc_macro/"}
ic-cdk-timers={version = "0.1.0" }
burn = { version = "0.17.0", default-features = false, features = ["std", "ndarray", "autodiff","dataset"] }
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js","std"]}
icrc-ledger-types = "0.1.5"
tokio = { version = "1.46.1", features = ["rt","sync","macros","io-util","time"] }
[build]
rustflags = ["--cfg", "getrandom_backend=\"custom\""]
target = "wasm32-unknown-unknown"

