[package]
name = "pred"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
bincode = "1.3.3"
burn = { version = "0.17.0", default-features = false, features = ["std", "ndarray", "autodiff","dataset"] }
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = { version="0.6.8"}
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"]}

[build]
rustflags = ["--cfg", "getrandom_backend=\"custom\""]
target = "wasm32-unknown-unknown"