[package]
name = "burn_price_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.13" 
bincode = "1.3.3"
burn = { git = "https://github.com/burn-rs/burn", branch = "fix/wasm-dep", default-features = false, features = ["std", "ndarray", "autodiff"] }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.3.2", default-features = false }
rand = "0.9.0"
